Put error messages in PageUrl, Allow unfetchable image urls, Shorten FROM email name